--- a/Pagina web de Gatos.html
+++ b/Pagina web de Gatos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <meta charset=utf-8>
+    <meta charset="UTF-8">
     <title>CatPhotoApp</title>
   </head>
    <body>
@@ -43,4 +43,5 @@
       </p>
     </footer>
   </body>
+
 </html>
